initial config update

--- a/_config.yml
+++ b/_config.yml
@@ -7,11 +7,11 @@
 
 # Site Settings
 locale                   : "en"
-title                    : "Site Title"
+title                    : "Dave Benvenuti"
 title_separator          : "-"
-name                     : "Your Name"
+name                     : "Dave Benvenuti"
 description              : "An amazing website."
-url                      : # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
+url                      : "http://davebenvenuti.me"
 baseurl                  : # the subpath of your site, e.g. "/blog"
 repository               : # GitHub username/repo-name e.g. "mmistakes/minimal-mistakes"
 teaser                   : # filename of teaser fallback teaser image placed in /images/, .e.g. "500x300.png"
@@ -77,24 +77,24 @@ analytics:
 
 # Site Author
 author:
-  name             : "Your Name"
+  name             : "Dave Benvenuti"
   avatar           : "bio-photo.jpg"
-  bio              : "I am an amazing person."
-  location         : "Somewhere"
+  bio              : "Software Engineer/Architect"
+  location         : "Cambridge, MA"
   email            :
-  uri              :
-  bitbucket        :
+  uri              : "http://davebenvenuti.me"
+  bitbucket        : "https://bitbucket.org/davebenvenuti"
   codepen          :
   dribbble         :
-  flickr           :
+  flickr           : "https://flickr.com/dave.benvenuti"
   facebook         :
   foursquare       :
-  github           :
-  google_plus      :
+  github           : "https://github.com/davebenvenuti"
+  google_plus      : "https://plus.google.com/u/0/116114631595520695963"
   keybase          :
-  instagram        :
+  instagram        : "https://www.instagram.com/davebenvenuti
   lastfm           :
-  linkedin         :
+  linkedin         : "https://www.linkedin.com/in/dave-benvenuti-9989556"
   pinterest        :
   soundcloud       :
   stackoverflow    : # "123456/username" (the last part of your profile url, e.g. http://stackoverflow.com/users/123456/username)
