fix missing quote

--- a/_config.yml
+++ b/_config.yml
@@ -92,7 +92,7 @@ author:
   github           : "https://github.com/davebenvenuti"
   google_plus      : "https://plus.google.com/u/0/116114631595520695963"
   keybase          :
-  instagram        : "https://www.instagram.com/davebenvenuti
+  instagram        : "https://www.instagram.com/davebenvenuti"
   lastfm           :
   linkedin         : "https://www.linkedin.com/in/dave-benvenuti-9989556"
   pinterest        :
