add current headshot

--- a/_config.yml
+++ b/_config.yml
@@ -78,7 +78,7 @@ analytics:
 # Site Author
 author:
   name             : "Dave Benvenuti"
-  avatar           : "bio-photo.jpg"
+  avatar           : "headshot.jpg"
   bio              : "Software Engineer/Architect"
   location         : "Cambridge, MA"
   email            :
