--- a/_config.yml
+++ b/_config.yml
@@ -227,3 +227,18 @@ compress_html:
   clippings: all
   ignore:
     envs: development
+
+defaults:
+  - scope:
+      path: "/posts"
+      type: posts
+    values:
+      layout: single
+      author_profile: true
+
+  - scope:
+      path: ""
+      type: pages
+    values:
+      layout: single
+      author_profile: true
