fix flickr link

--- a/_config.yml
+++ b/_config.yml
@@ -86,7 +86,7 @@ author:
   bitbucket        : "davebenvenuti"
   codepen          :
   dribbble         :
-  flickr           : "dave.benvenuti"
+  flickr           : "davebenvenuti"
   facebook         :
   foursquare       :
   github           : "davebenvenuti"
