fix meta description

--- a/_config.yml
+++ b/_config.yml
@@ -10,7 +10,7 @@ locale                   : "en"
 title                    : "Dave Benvenuti"
 title_separator          : "-"
 name                     : "Dave Benvenuti"
-description              : "An amazing website."
+description              : "Dave Benvenuti is a Freelance Software Engineer/Architect specializing in Ruby on Rails, node.js, and frontend Javascript development."
 url                      : "http://davebenvenuti.me"
 baseurl                  : # the subpath of your site, e.g. "/blog"
 repository               : "davebenvenuti/davebenvenuti.github.io"
