support for photography section

--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -3,5 +3,8 @@ main:
   - title: "About"
     url: /
 
+  - title: "Photography"
+    url: /photography
+
   - title: "Projects"
     url: /projects
