--- a/_config.yml
+++ b/_config.yml
@@ -79,7 +79,7 @@ analytics:
 author:
   name             : "Dave Benvenuti"
   avatar           : "bio-photo.jpg"
-  bio              : "Software Engineer/Architect"
+  bio              : "Freelance Developer"
   location         : "Cambridge, MA"
   email            :
   uri              : "http://davebenvenuti.me"
