--- a/_config.yml
+++ b/_config.yml
@@ -77,6 +77,7 @@ analytics:
 
 # Site Author
 author:
+  500px            : "davebenvenuti"
   name             : "Dave Benvenuti"
   avatar           : "bio-photo.jpg"
   bio              : "Freelance Developer"
