--- a/_config.yml
+++ b/_config.yml
@@ -81,7 +81,7 @@ author:
   name             : "Dave Benvenuti"
   avatar           : "bio-photo.jpg"
   bio              : "Freelance Developer"
-  location         : "Cambridge, MA"
+  location         : "Seattle, WA"
   email            :
   uri              : "http://davebenvenuti.me"
   bitbucket        : "davebenvenuti"
